--- a/batik/css/forum.css
+++ b/batik/css/forum.css
@@ -9,6 +9,7 @@ li {
 html,
 body {
   height: 100%;
+  overflow: hidden;
 }
 #main {
   width: 100%;
@@ -60,28 +61,19 @@ body {
   height: 80%;
   background-color: blue;
 }
-#main #show-plc {
+#main #forum-box {
   float: left;
   position: relative;
   width: 97%;
   height: 100%;
   background-color: black;
+  overflow: auto;
 }
-#main #show-plc #show-logo {
-  position: absolute;
-  top: 10%;
-  right: 10%;
-  width: 8%;
-  height: 12%;
-  background-color: white;
-}
-#main #show-plc #show-content {
-  position: absolute;
-  top: 40%;
-  right: 15%;
-  width: 25%;
-  height: 40%;
-  background-color: white;
+#main #forum-box div {
+  width: 80%;
+  height: 30%;
+  background-color: purple;
+  margin: 1% 0;
 }
 #toolbar {
   width: 100%;
