--- a/batik/css/forum.less
+++ b/batik/css/forum.less
@@ -6,10 +6,14 @@
 ul, li {
     list-style: none;
 }
+html {
+    max-width: 1500px;
+    min-width: 800px;
+}
 html,
 body {
     height: 100%;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 
@@ -24,14 +28,16 @@ body {
         float: left;
         width: 3%;
         height: 100%;
-        background-color: yellow;
+        // background-color: yellow;
 
         #nav-card {
-            position: relative;
+            position: fixed;
+            top: 50%;
+            left: 0;
             width: 100%;
             height: 100%;
             // let nav-card hide in left side
-            transform: translateX(-250%);
+            transform: translate(-250%, -50%);
 
             // the main info display area in nav-card
             #nav-main {
@@ -83,14 +89,100 @@ body {
         height: 100%;
         background-color: black;
         overflow: auto;
-        
-        div {
-            width: 80%;
-            height: 30%;
-            background-color: purple;
-            margin: 1% 0;
+    }
+
+    // forum-left start
+    #forum-left {
+        width: 80%;
+        width: grey;
+        float: left;
+
+        #forum-editor {
+            width: 100%;
+            height: 200px;
+            background-color: green;
+
         }
 
+        #forum-content {
+            width: 100%;
+            background-color: purple;
+
+            div.forum-comment {
+                width: 100%;
+                overflow: hidden;
+                background-color: white;
+
+                div.cmt-flag {
+                    height: 100%;
+                    width: 3%;
+                    background-color: yellow;
+                    float: left;
+                }
+
+                div.cmt-main {
+                    // height: 100%;
+                    width: 97%;
+                    float: left;
+
+                    div.user-bio {
+                        width: 100%;
+                        overflow: hidden;
+
+                        div.user-pto {
+                            width: 50px;
+                            height: 50px;
+                            border-radius: 50%;
+                            background-color: red;
+                            float: left;
+                        }
+                        
+                        div.user-info {
+                            float: left;
+
+                            div.user-name {
+                                font-size: 18px;
+                                
+                            }
+                            div.user-tag {
+                                font-size: 14px;
+                            }
+                        }
+                    }
+
+                    div.cmt-content {
+                        width: 100%;
+                        font-size: 15px;
+                        word-wrap:break-word;
+                    }
+                }
+            }
+        }
+    }
+
+    //forum-right start
+    #forum-right {
+        width: 20%;
+        float: left;
+
+        #forum-hotpic {
+            width: 100%;
+            background-color: orange;
+
+            div.hotpic-img {
+                width: 100%;
+                height: 150px;
+                background-color: aqua;
+            }
+
+            div.hotpic-ttl {
+                font-size: 18px;
+            }
+            div.hotpic-content {
+                font-size: 14px;
+                word-wrap:break-word;
+            }
+        }
     }
 }
 // #main area (up body) end
@@ -108,9 +200,9 @@ body {
 
         li {
             float: left;
-            width: 10%;
-            height: 100%;
-            margin: 0 1%;
+            width: 25px;
+            height: 25px;
+            margin: 0 5px;
             background-color: white;
         }
     }
