--- a/batik/css/navindex.less
+++ b/batik/css/navindex.less
@@ -13,6 +13,7 @@ body {
     height: 100%;
     max-width: 1600px;
     min-width: 800px;
+    overflow: hidden;
 }
 
 #header {
@@ -26,30 +27,74 @@ body {
     height: 15%;
     position: relative;
     background-color: green;
-    overflow: hidden;
+    // overflow: hidden;
+    
+    #scroll {
+        width: 200%;
+        height: 100%;
+
+        animation: scroll-left 20s linear 0s infinite normal;
+    }
+
 
     ul {
         width: 100%;
         height: 100%;
-    }
-    li {
         float: left;
-        width: 10%;
-        height: 100%;
+        
+        
 
-        #glr-1, #glr-3, #glr-5, #glr-7, #glr-9 {
-            width: 100%;
+        li {
+            float: left;
+            width: 5%;
             height: 100%;
-            background-color: blue;
+        }
+
+        li:nth-child(2n) {
+            div {
+                width: 100%;
+                height: 100%;
+                background-color: blue;
+            }
+        }
+
+        li:nth-child(2n+1) {
+            div {
+                width: 100%;
+                height: 100%;
+                background-color: yellow;
+            }
+        }
+
+        li:nth-child(10),li:nth-child(20) {
+            div {
+                background-color: green!important;
+            }
+        }
+
+        li:hover div {
+            position: relative;
+            z-index: 99;
+            animation: scale-up 500ms forwards;
         }
     }
-
+    #scroll:hover {
+            animation-play-state: paused;
+    }
 }
 
 #main {
     width: 100%;
     height: 80%;
     position: relative;
+}
+#detl {
+    position: absolute;
+    top: 15%;
+    left: 40%;
+    width: 300px;
+    height: 150px;
+    background-color: black;
 }
 #menu {
     position: absolute;
@@ -71,6 +116,7 @@ body {
         width: 25%;
         height: 100%;
         float: left;
+        background-color: red;
     }
 
     li:nth-child(2n) {
@@ -79,6 +125,10 @@ body {
             height: 100%;
             background-color: green;
         }
+    }
+    
+    li:hover {
+        animation: scale-up 500ms forwards;
     }
 }
 
@@ -125,3 +175,24 @@ body {
     height: 150px;
     background-color: black;
 }
+
+// animation
+@keyframes scroll-left {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+@keyframes scale-up {
+    0% {
+        transform: scale(1,1);
+    }
+    100% {
+        transform: scale(1.2, 1.2);
+        box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.5);
+    }
+}
+
