--- a/batik-web/css/gallery.css
+++ b/batik-web/css/gallery.css
@@ -1,26 +1,80 @@
+#bgimage {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+}
+#bgimage img {
+  width: 100%;
+  height: 100%;
+}
+.mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.7);
+}
 #main-content {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 2;
   width: 100%;
   height: 96%;
 }
-#head-title {
+#headline {
+  position: relative;
   width: 100%;
-  height: 15%;
+  height: 10%;
+  z-index: 2;
+  color: aliceblue;
 }
-#head-title .w10 {
+#headline .w10 {
   width: 10%;
   height: 100%;
 }
-#head-title .w80 {
+#headline .w80 {
   width: 80%;
   height: 100%;
 }
-#head-title title {
+#headline .title {
   font-size: 40px;
   font-weight: bolder;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
+#headline .back,
+#headline .renew {
+  font-size: 30px;
+  text-align: center;
+  color: aliceblue;
+}
 #gallery {
+  position: relative;
   width: 100%;
-  height: 85%;
+  height: 90%;
+  z-index: 2;
+}
+#gallery .demo-box {
+  width: 85%;
+  height: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  display: flex;
+  justify-content: space-around;
+}
+#gallery .batik-demo {
+  flex: 0 0 15%;
+  height: 100%;
+}
+#gallery .batik-demo img {
+  height: 100%;
+}
+#bottom-bar {
+  position: relative;
+  z-index: 2;
 }
