--- a/batik-web/css/gallery.less
+++ b/batik-web/css/gallery.less
@@ -1,8 +1,29 @@
+#bgimage {
+    position: absolute;
+    z-index: 0;
+    width: 100%;    height: 100%;
+    img {
+        width: 100%;    height: 100%;
+    }
+}
+.mask {
+    position: absolute;
+    width: 100%;    height: 100%;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.7);
+}
 #main-content {
+    position: relative;
+    top: 0;     left: 0;
+    z-index: 2;
     width: 100%;    height: 96%;
 }
-#head-title {
-    width: 100%;    height: 15%;
+#headline {
+    position: relative;
+    width: 100%;    height: 10%;
+    z-index: 2;
+    // background-color: black;
+    color: aliceblue;
 
     .w10 {
         width: 10%;     height: 100%;
@@ -11,13 +32,45 @@
         width: 80%;     height: 100%;
     }
 
-    title {
+    .title {
         font-size: 40px;    font-weight: bolder;
         font-family: Arial, Helvetica, sans-serif;
         text-align: center;
     }
+    .back, .renew {
+        font-size: 30px;
+        text-align: center;
+        // background-color: black;
+        color: aliceblue;
+    }
+
 }
 #gallery {
-    width: 100%;    height: 85%;
+    position: relative;
+    width: 100%;    height: 90%;
+    z-index: 2;
 
+    .demo-box {
+        width: 85%;  height: 90%;
+        position: absolute;
+        top: 50%;   left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        display: flex;
+        justify-content: space-around;
+        
+    }
+
+    .batik-demo {
+        flex: 0 0 15%;     height: 100%;
+
+        img {
+            height: 100%;
+        }
+    }
+    
+}
+#bottom-bar {
+    position: relative;
+    z-index: 2;
 }
