--- a/batik-web/css/bottom-bar.css
+++ b/batik-web/css/bottom-bar.css
@@ -1,4 +1,6 @@
 #bottom-bar {
+  position: relative;
+  z-index: 99;
   width: 100%;
   height: 4%;
   background-color: #000;
@@ -19,8 +21,18 @@
   margin-left: 5px;
 }
 #copyright {
+  position: relative;
   height: 100%;
   margin-right: 10px;
   color: #b3b3b3;
   font-size: 12px;
+}
+.sound-ctrl {
+  font-size: 15px;
+  margin: 0 2px;
+  color: #fff;
+  display: none;
+}
+.sound-ctrl div {
+  padding: 0 5px;
 }
