--- a/batik-web/css/bottom-bar.less
+++ b/batik-web/css/bottom-bar.less
@@ -1,4 +1,6 @@
 #bottom-bar {
+    position: relative;
+    z-index: 99;
     width: 100%;
     height: 4%;
     background-color: #000;
@@ -18,8 +20,21 @@
     }
 }
 #copyright {
+    position: relative;
     height: 100%;
     margin-right: 10px;
     color: rgb(179, 179, 179);
     font-size: 12px;
+}
+
+.sound-ctrl {
+    font-size: 15px;
+    margin: 0 2px;
+    color: #fff;
+    display: none;
+
+    div {
+       padding: 0 5px;
+    }
+    
 }
