--- a/batik-web/css/icomoon.css
+++ b/batik-web/css/icomoon.css
@@ -1,14 +1,14 @@
 @font-face {
-    font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?n0jke4');
-    src:  url('../fonts/icomoon.eot?n0jke4#iefix') format('embedded-opentype'),
-          url('../fonts/icomoon.ttf?n0jke4') format('truetype'),
-          url('../fonts/icomoon.woff?n0jke4') format('woff'),
-          url('../fonts/icomoon.svg?n0jke4#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
-  }
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?axfqxr');
+  src:  url('../fonts/icomoon.eot?axfqxr#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?axfqxr') format('truetype'),
+    url('../icomoon.woff?axfqxr') format('woff'),
+    url('../fonts/icomoon.svg?axfqxr#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
 em.icomoon {
     font-style: normal;
     font-family: icomoon;
