--- a/batik-web/css/indexexp.less
+++ b/batik-web/css/indexexp.less
@@ -43,6 +43,10 @@
             text-align: center;
             
         }
+        .nav-experience {
+            background-color: rgba(150,95,40,.8);
+            color: #fff;
+        }
     }
     
 }
@@ -89,11 +93,13 @@
         background-size: cover;
 
         .mask {
+            width: 100%;    height: 100%;
             word-wrap: break-word;
             text-align: center;
-            font-size: 50px;    font-weight: bolder;
+            font-size: 30px;    font-weight: bolder;
             font-family: Arial, Helvetica, sans-serif;
             color: #fff;
+            background-color: rgba(0, 0, 0, .4);
             
         }
     }
