--- a/batik-web/css/indexsty.less
+++ b/batik-web/css/indexsty.less
@@ -42,6 +42,10 @@
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
         }
+        .nav-stories {
+            background-color: rgba(150,95,40,.8);
+            color: #fff;
+        }
     }
 }
 
@@ -87,11 +91,14 @@
         background-size: cover;
 
         .mask {
+            width: 100%;    height: 100%;
             word-wrap: break-word;
             text-align: center;
-            font-size: 50px;    font-weight: bolder;
+            font-size: 30px;    font-weight: bolder;
             font-family: Arial, Helvetica, sans-serif;
-            color: #fff;    
+            color: #fff;
+            background-color: rgba(0, 0, 0, .4);
+            
         }
     }
     .cnbox1 {
