--- a/batik-web/css/landing.less
+++ b/batik-web/css/landing.less
@@ -26,18 +26,20 @@
     .cls-title {
         width: 100%;
         height: 15%;
-        background-color: #000;
 
         font-size: 50px;     font-weight: bolder;
-        color: aliceblue;
+        color: #fff;
         text-align: center;
     }
 
-    .numbers {
+    .number-box {
         position: absolute;
-        left: 5%;  bottom: 10%;
-
+        z-index: 6;
+        right: 5%;  top: 5%;
+        // width: 25%;
         font-size: 30px;    font-weight: bold;
+        text-align: right;
+        color: #fff;
     }
 
     
@@ -77,12 +79,12 @@
 .skip-btn {
     position: absolute;
     z-index: 99;
-    right: 1%;  bottom: 20%;
+    right: 0;  bottom: 10%;
     width: 10%;
     height: 10%;
     background-color: rgba(0, 0, 0, .4);
 
     font-size: 30px;    font-weight: bolder;
-    color: aliceblue;
+    color: #fff;
     text-align: center;
 }
