--- a/batik-web/css/featuredarticles.less
+++ b/batik-web/css/featuredarticles.less
@@ -26,7 +26,7 @@
             border-bottom: 1px solid rgb(63, 63, 63);
 
             font-size: 18px;    font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             color: aliceblue;
         }
     }
@@ -43,7 +43,7 @@
     
 
     .atc-box {
-        flex: 0 0 33%;
+        flex: 0 0 33.33%;
         height: 50%;
         background-color: rgb(162, 146, 130);
 
@@ -59,17 +59,17 @@
             width: 100%;    height: 30%;
 
             .atc-cls {
-                padding: 5px 8px;
+                padding: 2%;
                 font-size: 13px;
-                font-family: Arial, Helvetica, sans-serif;
+                font-family: perpetua ,Arial, Helvetica, sans-serif;
                 color: aliceblue;
             }
 
             .atc-title {
-                padding: 5px 8px;
-                font-size: 18px;
+                padding: 2%;
+                font-size: 22px;
                 font-weight: bold;
-                font-family: Arial, Helvetica, sans-serif;
+                font-family: perpetua ,Arial, Helvetica, sans-serif;
                 color: aliceblue;
             }
         }
