--- a/batik-web/css/landing.less
+++ b/batik-web/css/landing.less
@@ -22,6 +22,7 @@
     position: absolute;
     z-index: 3;
     width: 100%;    height: 100%;
+    font-family:  cursive, cursiva, Arial, Helvetica, sans-serif;
 
     .cls-title {
         width: 100%;
@@ -86,5 +87,6 @@
 
     font-size: 30px;    font-weight: bolder;
     color: #fff;
+    font-family: cursive, cursiva, Arial, Helvetica, sans-serif;
     text-align: center;
 }
