--- a/batik-web/css/gallery.css
+++ b/batik-web/css/gallery.css
@@ -26,7 +26,7 @@
 #headline {
   position: relative;
   width: 100%;
-  height: 10%;
+  height: 15%;
   z-index: 2;
   color: aliceblue;
 }
@@ -39,21 +39,21 @@
   height: 100%;
 }
 #headline .title {
-  font-size: 40px;
-  font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   text-align: center;
 }
 #headline .back,
-#headline .renew {
-  font-size: 40px;
+#headline .fresh-btn {
+  font-size: 50px;
   text-align: center;
   color: aliceblue;
 }
 #gallery {
   position: relative;
   width: 100%;
-  height: 90%;
+  height: 85%;
   z-index: 2;
 }
 #gallery .demo-box {
