--- a/batik-web/css/gallery.less
+++ b/batik-web/css/gallery.less
@@ -20,7 +20,7 @@
 }
 #headline {
     position: relative;
-    width: 100%;    height: 10%;
+    width: 100%;    height: 15%;
     z-index: 2;
     // background-color: black;
     color: aliceblue;
@@ -33,12 +33,12 @@
     }
 
     .title {
-        font-size: 40px;    font-weight: bolder;
-        font-family: Arial, Helvetica, sans-serif;
+        font-size: 50px;    font-weight: bold;
+        font-family: perpetua ,Arial, Helvetica, sans-serif;
         text-align: center;
     }
-    .back, .renew {
-        font-size: 40px;
+    .back, .fresh-btn {
+        font-size: 50px;
         text-align: center;
         // background-color: black;
         color: aliceblue;
@@ -47,7 +47,7 @@
 }
 #gallery {
     position: relative;
-    width: 100%;    height: 90%;
+    width: 100%;    height: 85%;
     z-index: 2;
 
     .demo-box {
