--- a/batik-web/css/icomoon.css
+++ b/batik-web/css/icomoon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?axfqxr');
-  src:  url('../fonts/icomoon.eot?axfqxr#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?axfqxr') format('truetype'),
-    url('../icomoon.woff?axfqxr') format('woff'),
-    url('../fonts/icomoon.svg?axfqxr#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?syaowo');
+  src:  url('../fonts/icomoon.eot?syaowo#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?syaowo') format('truetype'),
+        url('../fonts/icomoon.woff?syaowo') format('woff'),
+        url('../fonts/icomoon.svg?syaowo#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
