--- a/batik-web/css/index.css
+++ b/batik-web/css/index.css
@@ -43,7 +43,7 @@
   margin: 100px auto;
   font-size: 40px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   text-align: center;
 }
 #right-topic {
@@ -68,7 +68,7 @@
   z-index: 2;
   font-size: 60px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   color: rgba(255, 255, 255, 0.685);
 }
 #right-topic .info {
@@ -82,7 +82,7 @@
   padding: 10px;
   font-size: 25px;
   font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   text-align: center;
   color: #fff;
 }
