--- a/batik-web/css/index.less
+++ b/batik-web/css/index.less
@@ -39,7 +39,7 @@
             background-color:   rgba(255, 255, 255, 0.445);
             margin: 100px auto;
             font-size: 40px;    font-weight: bolder;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             text-align: center;
             
         }
@@ -68,7 +68,7 @@
         z-index: 2;
 
         font-size: 60px;    font-weight: bolder;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: perpetua ,Arial, Helvetica, sans-serif;
         color: rgba(255, 255, 255, 0.685);
     }
     .info {
@@ -80,7 +80,7 @@
             margin: 20px 0;
             padding: 10px;
             font-size: 25px;    font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             text-align: center;
             color: #fff;
         }
