--- a/batik-web/css/indexexp.css
+++ b/batik-web/css/indexexp.css
@@ -41,9 +41,9 @@
   line-height: 80px;
   background-color: rgba(255, 255, 255, 0.445);
   margin: 100px auto;
-  font-size: 40px;
+  font-size: 25px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   text-align: center;
 }
 #left-nav .nav-content .nav-experience {
@@ -72,7 +72,7 @@
   z-index: 2;
   font-size: 40px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   color: aliceblue;
 }
 #right-topic .center-nav {
@@ -99,9 +99,9 @@
   height: 100%;
   word-wrap: break-word;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.4);
 }
