--- a/batik-web/css/indexexp.less
+++ b/batik-web/css/indexexp.less
@@ -38,8 +38,8 @@
             line-height: 80px;
             background-color:   rgba(255, 255, 255, 0.445);
             margin: 100px auto;
-            font-size: 40px;    font-weight: bolder;
-            font-family: Arial, Helvetica, sans-serif;
+            font-size: 25px;    font-weight: bolder;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             text-align: center;
             
         }
@@ -71,7 +71,7 @@
         z-index: 2;
 
         font-size: 40px;    font-weight: bolder;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: perpetua ,Arial, Helvetica, sans-serif;
         color: aliceblue;
     }
     
@@ -96,8 +96,8 @@
             width: 100%;    height: 100%;
             word-wrap: break-word;
             text-align: center;
-            font-size: 30px;    font-weight: bolder;
-            font-family: Arial, Helvetica, sans-serif;
+            font-size: 25px;    font-weight: bolder;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             color: #fff;
             background-color: rgba(0, 0, 0, .4);
             
