--- a/batik-web/css/indexsty.css
+++ b/batik-web/css/indexsty.css
@@ -43,7 +43,7 @@
   margin: 100px auto;
   font-size: 40px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   text-align: center;
 }
 #left-nav .nav-content .nav-stories {
@@ -72,7 +72,7 @@
   z-index: 2;
   font-size: 40px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   color: aliceblue;
 }
 #right-topic .center-nav {
@@ -101,7 +101,7 @@
   text-align: center;
   font-size: 30px;
   font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: perpetua, Arial, Helvetica, sans-serif;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.4);
 }
