--- a/batik-web/css/indexsty.less
+++ b/batik-web/css/indexsty.less
@@ -39,7 +39,7 @@
             background-color:   rgba(255, 255, 255, 0.445);
             margin: 100px auto;
             font-size: 40px;    font-weight: bolder;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             text-align: center;
         }
         .nav-stories {
@@ -69,7 +69,7 @@
         z-index: 2;
 
         font-size: 40px;    font-weight: bolder;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: perpetua ,Arial, Helvetica, sans-serif;
         color: aliceblue;
     }
     
@@ -95,7 +95,7 @@
             word-wrap: break-word;
             text-align: center;
             font-size: 30px;    font-weight: bolder;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: perpetua ,Arial, Helvetica, sans-serif;
             color: #fff;
             background-color: rgba(0, 0, 0, .4);
             
