--- a/batik-web/css/landing.css
+++ b/batik-web/css/landing.css
@@ -21,6 +21,7 @@
   z-index: 3;
   width: 100%;
   height: 100%;
+  font-family: cursive, cursiva, Arial, Helvetica, sans-serif;
 }
 #contents .cls-title {
   width: 100%;
@@ -88,5 +89,6 @@
   font-size: 30px;
   font-weight: bolder;
   color: #fff;
+  font-family: cursive, cursiva, Arial, Helvetica, sans-serif;
   text-align: center;
 }
