--- a/batik-web/css/story1.css
+++ b/batik-web/css/story1.css
@@ -1,137 +1,29 @@
-#main-content {
-  width: 100%;
-  height: 96%;
-  background: grey;
-}
-#huge-left {
-  width: 70%;
-  height: 100%;
-  background-color: black;
-}
-#core-story {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  background-color: blue;
-}
-#core-story .video-img {
+.content-display-window {
   position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 20;
   width: 100%;
   height: 100%;
-  z-index: 0;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.9);
 }
-#core-story .video-img img {
-  width: 100%;
-  height: 100%;
+.content-display-window .close-btn {
+  z-index: 21;
+  font-size: 25px;
 }
-#core-story .mask {
+.content-display-window .content-box {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  background-color: rgba(100, 91, 84, 0.4);
-}
-#core-story .video-title {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 10%;
-  font-size: 50px;
-  font-weight: bolder;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #7a5f38;
-  z-index: 2;
-}
-#core-story .video-content {
-  position: absolute;
-  box-sizing: border-box;
-  width: 500px;
+  width: 90%;
+  height: 80%;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  padding: 15px;
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #977b53;
-  font-weight: bold;
-  background-color: rgba(190, 177, 163, 0.8);
-  z-index: 2;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
-#core-story .play-button {
-  left: 0;
-  bottom: 3%;
-}
-#small-widgets-left {
-  width: 100%;
-  height: 40%;
-}
-#small-widgets-left .small-wide-widget {
-  position: relative;
-  width: 50%;
-  height: 100%;
-}
-#small-widgets-left .small-wide-widget .w-t-1 {
-  left: 3%;
-  top: 3%;
-}
-#small-widgets-left .small-wide-widget .play-button {
-  right: 3%;
-  bottom: 3%;
-}
-#huge-right {
-  width: 30%;
-  height: 100%;
-}
-#small-widgets-right {
-  width: 100%;
-  height: 100%;
-}
-#small-widgets-right .small-high-widget {
-  position: relative;
-  width: 100%;
+.content-display-window .content-box img {
+  width: 33.33%;
   height: 50%;
-}
-#small-widgets-right .w-t-3 {
-  top: 1%;
-  right: 1%;
-  font-size: 50px;
-  font-weight: normal;
-  color: rgba(255, 255, 255, 0.8);
-}
-#small-widgets-right .w-t-4 {
-  width: 40%;
-  font-size: 30px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #381005;
-  background-color: rgba(231, 203, 162, 0.7);
-  text-align: center;
-  padding: 5% 0;
-  right: 0;
-  top: 0;
-}
-.widget-bg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-}
-.widget-title {
-  position: absolute;
-  color: #fff;
-  padding: 10px;
-  z-index: 2;
-}
-.play-button {
-  position: absolute;
-  z-index: 2;
-  width: 150px;
-  box-sizing: border-box;
-  padding: 10px;
-  font-size: 15px;
-  text-align: center;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.8);
 }
