--- a/batik-web/css/story1.less
+++ b/batik-web/css/story1.less
@@ -1,157 +1,32 @@
-#main-content {
-    width: 100%;    height: 96%;
-    background: grey;
-}
+.content-display-window {
+    position: absolute;
+    top: 0; left: 0;
+    z-index: 20;
+    width: 100%; 
+    height: 100%; 
+    display: none;
 
-// left-main-content: stroy1-video + random 2 widgets-wide
-#huge-left {
-    width: 70%;    height: 100%;
-    background-color: black;
-}
-    // core-story video
-    #core-story {
-        position: relative;
-        width: 100%;    height: 60%;
-        background-color: blue;
+    background-color: rgba(0, 0, 0, .9);
 
-        // video-img
-        .video-img {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            z-index: 0;
+    .close-btn {
+        z-index: 21;
+        font-size: 25px;
+    }
+    .content-box {
+        position: absolute;
+        width: 90%;    height: 80%;
+        left: 50%;       top: 50%;   
+        transform: translate(-50%, -50%);
 
-            img {
-                width: 100%;
-                height: 100%;
-            }
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+        img {
+            width: 33.33%;  height: 50%;
         }
-        // mask
-        .mask {
-            position: absolute;
-            width: 100%;    height: 100%;
-            z-index: 1;
-            background-color: rgba(100, 91, 84, 0.4);
-        }
-        // video-title
-        .video-title {
-            position: absolute;
-            left: 50%;  transform: translateX(-50%);
-            top: 10%;
-            font-size: 50px;      font-weight: bolder;
-            font-family: Arial, Helvetica, sans-serif;
-            color: #7a5f38;
-            z-index: 2;
-        }
-        // video-content
-        .video-content {
-            position: absolute;
-            box-sizing: border-box;
-            width: 500px;
-            left: 50%;      
-            top: 50%;       transform: translate(-50%, -50%);
-            padding: 15px;
-            font-size: 14px;
-            font-family: Arial, Helvetica, sans-serif;
-            color: rgb(151, 123, 83);
-            font-weight: bold;
-            background-color: rgba(190, 177, 163, 0.8);
-            z-index: 2;
-        }
-        // play-button
-        .play-button {
-            left: 0;    bottom: 3%;
-        }
+
         
     }
 
-    // widgets-wide
-    #small-widgets-left {
-        width: 100%;    height: 40%;
-
-        // small-wide-widget common style
-        .small-wide-widget {
-            position: relative;
-            width: 50%;    height: 100%;
-
-
-            .w-t-1 {
-                left: 3%;   top: 3%;
-            }
-            .play-button {
-                right: 3%;  bottom: 3%;
-            }
-        }
-    }
-//------left-content ends------
-
-
-// right-main-content: random 2 widgets-high
-#huge-right {
-    width: 30%;
-    height: 100%;
 }
-#small-widgets-right {
-    width: 100%;    height: 100%;
-    .small-high-widget {
-        position: relative;
-        width: 100%;    height: 50%;
-    }
-    .sketchfab-embed-wrapper {
-        width: 100%;    
-    }
-    .widget-3 {
-        iframe {
-            width: 800px;    height: 100%;
-            position: absolute;
-            z-index: 5;
-        }
-        
-    }
-    }
-    .w-t-4 {
-        width: 40%;
-        font-size: 30px;    font-weight: bold;
-        font-family: Arial, Helvetica, sans-serif;
-        color: rgb(56, 16, 5);
-        // word-wrap: break-word;
-        background-color: rgba(231, 203, 162, .7);
-        text-align: center;
-        padding: 5% 0;
-        right: 0;
-        top: 0;
-    }
-}
-
-
-// widget common style
-.widget-bg {
-    position: absolute;
-    width: 100%; height: 100%;
-    z-index: 0;
-}
-.widget-title {
-    position: absolute;
-    color: #fff;
-    padding: 10px;
-    z-index: 2;
-}
-
-.play-button {
-    position: absolute;
-    z-index: 2;
-    width: 150px;
-    box-sizing: border-box;
-    padding: 10px;
-    font-size: 15px;    text-align: center;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #fff;
-    background-color: rgba(0, 0, 0, .8);
-   
-}
-.forward {
-    top: 1%;
-    right: 1%;
-    font-size: 50px;    font-weight: normal;
-    color: rgba(255, 255, 255, 0.8);
